Stanford Profile 7.x-x.x xxxx-xx-xx
-----------------------------------

Stanford Profile 7.x-2.5 2017-03-01
-----------------------------------
- Various module updates in .make files
- Enable stanford_date_formats and stanford_page by default
- CodeClimate and TravisCI integration

Stanford Profile 7.x-2.4 2016-07-20
-----------------------------------
- Various module updates in .make files

Stanford Profile 7.x-2.3 2016-04-15
-----------------------------------
- Add patch for field_collection
- Add stanford_s3fs_if module
- Update Field Collection
- Updated DOMPDF library to v0.6.2
- Updated stanford_framework theme to 7.x-3.2-dev+8
- Updated version of anchorage_helper to 1.0

Stanford Profile 7.x-2.2+13-dev 2016-02-18
-----------------------------------
- Adding patch for simplesamlphp_auth
- Changed release for CAPX to the php54 supported version
- group and personal sites should get stanford_basic
- Update pathauto to 1.3
- Updated core drupal-7.41

Stanford Profile 7.x-2.2 2015-09-08
-----------------------------------
Changes since 7.x-2.1:
- Security updates and bug fixes in .make files

Stanford Profile 7.x-2.1 2015-08-18
-----------------------------------
Changes since 7.x-2.0:
By jbickar:
  - Updates to s3fs configuration during install time for Amazon hosting
By sherakama and jbickar:
  - Various module updates in .make files

Stanford Profile 7.x-2.0 2015-07-13
-----------------------------------
Changes since 7.x-1.3:
By jbickar:
  - Reorganization of modules into sites/all/modules/contrib and sites/all/modules/stanford
  - Reorganization of .make files to separate functionality (modules, themes, libraries, patches)
  - Support for SimpleSAML PHP authentication module
  - Support for Amazon S3 file system module
  - Update version of OpenLayers library from external CDN
  - Enable stanford_afs_quota module if installed on Stanford Sites
  - Many, many contrib and stanford module updates

Stanford Profile 7.x-1.3 2014-11-27